--- a/src/sass/layout/_service-card-2.scss
+++ b/src/sass/layout/_service-card-2.scss
@@ -6,6 +6,7 @@
   @media screen and (min-width: 1200px) {
     height: 750px;
     position: relative;
-    overflow-x: scroll;
+    // overflow-x: scroll;
+    overflow-y: scroll;
   }
 }
